[package]
name = "frame"
version = "0.1.0"
authors = ["Trever Shick <trever.shick@tanium.com>"]
edition = "2018"

[profile.release]
#opt-level = 'z'  # Optimize for size.
panic = 'abort'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
chrono = "0.4.7"
clap = "2.33.0"                   # A simple to use, efficient, and full-featured Command Line Argument Parser
